Fix spacing test

--- a/test/spacing/spacing.styl
+++ b/test/spacing/spacing.styl
@@ -1,4 +1,4 @@
 @import '../../source/blackjack'
 
 body
-	@extend $spacing-classes
+	@extend $spacingClasses
